# Inlog

./: .gitignore  Cargo.toml  README.md
examples/: all.rs  log.rs
src/: colours.rs  lib.rs
