[package]
name = "inlog"
version = "0.1.0"
edition = "2021"
authors = [ "Ben McAvoy <ben.mcavoy@tutanota.com>" ]
license = "MIT"
homepage = "https://github.com/BenMcAvoy/Analog"
repository = "https://github.com/BenMcAvoy/Analog"
description = "An incremental logger with only log as a dependency."

[dependencies]
log = "0.4.20"
